option 1 working, barely